COMM232A_WebCommunication/HoughtonEsports/assets/game_page.css
/* colors:
#1E202F
#494044
#75596A
#9F6E71
#FAD6CB

rgb(25, 32, 35)
rgb(28, 33, 39)
*/

body {
    background-color: rgb(46, 45, 69);
    color:#FAD6CB;
    margin:0;
    font-family: Lato, sans-serif;
    letter-spacing: .5px;
    font-weight: 400;
    font-size: 16px;
}


.heading_home {
    height: 40vh;
    min-height: 40vh;
    background: url('imgs/stadium2.jpg');
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: center;
}

.heading_ow {
    height: 40vh;
    min-height: 40vh;
    background: url('imgs/overwatch/overwatch0.png');
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: center;
}

.heading-text {
    margin: auto;
    color: #FFF;
    text-align: center;
    position: relative;
}

h1 {
    color: rgb(0,0,0);
    font-family: 'Montserrat', sans-serif;
    font-weight:200;
    font-size:80px;
}

h2 {
    font-family: Lato, sans-serif;
    font-weight: 300;
    font-size: 2em;
}
/* .title {
    background-color: #75596A;
    text-align: center;
    color: #FAD6CB;
    padding: 1em;
} */

/* .title h1{
    margin: 0em;
} */

.gameBanner {
    list-style-type: none;
    white-space: nowrap;
    font-family: arial,helvetica,sans-serif;
    display: flex;
    justify-content: center;
    background-color: #9F6E71;
}

.gameBanner li {
    display: inline;
    text-align: center;
    vertical-align: middle;
}

.gameBanner img{
    vertical-align: middle;
    padding: 0em 0.3em;
}

.gameBanner li a {
    margin:0.2em 1.2em;
    padding: 0;
    text-decoration: none;
    letter-spacing: 2px;
    text-transform: uppercase;
    float: left;
    vertical-align: middle;
}

/* Define the colors of the links */
#home {
    color:inherit;
}
#dota {
    color:red;
}
#overwatch {
    color:yellow;
}
#lol {
    color:blue;
}
#rl {
    color:lightgray;
}

#dota:hover, #lol:hover, #overwatch:hover, #rl:hover, #home:hover{
    color:#1E202F;
}

.content {
    width:800px;
    text-align: left;
    border: 0px;
    padding: 0;
    margin: 0 auto;
}

.content p {
    font-size: 1.1em;
}

.content h2 {
    font-size: 2em;
}

/* .content {
    margin-top: 50px;
    display: grid;
    grid-template-columns: 50% 50%;
    width:100%;
    height: 100%;
}

.grid-item {
    margin-right: 50px;
    margin-left: 50px;
}

.grid-item h2  {
    text-align: center;
    border-bottom-style: solid;
    border-width: thin;
} */

/* TODO: Fix footer to be on bottom with no margin */
footer {
    width: 100%;
    /* bottom:0; */
    background-color: #75596A;
    margin-bottom: 0;
}

a {
    text-decoration: none;
    color: inherit;
}

#footer_content {
    width:800px;
    text-align: left;
    border: 0px;
    padding: 0;
    margin: 0 auto;
}

